Remove unused source files and add build flags for TensorFlow Lite Micro

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	kahrendt/ESPMicroSpeechFeatures@^1.1.0
 	tanakamasayuki/TensorFlowLite_ESP32@^1.0.0
 	johnosbb/MicroTFLite@^1.0.4
+build_flags = -Itflite-micro -Itflite-micro/third_party/kissfft
