--- a/platformio.ini
+++ b/platformio.ini
@@ -1,19 +1,10 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32-s3-devkitc-1]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
+monitor_speed = 115200
+monitor_port = COM8
+upload_port = COM8
+upload_speed = 921600
 lib_deps = 
-	kahrendt/ESPMicroSpeechFeatures@^1.1.0
-	tanakamasayuki/TensorFlowLite_ESP32@^1.0.0
-	johnosbb/MicroTFLite@^1.0.4
-build_flags = -Itflite-micro -Itflite-micro/third_party/kissfft
+    tanakamasayuki/TensorFlowLite_ESP32 @ ^1.0.0
