--- a/platformio.ini
+++ b/platformio.ini
@@ -6,5 +6,8 @@ monitor_speed = 115200
 monitor_port = COM12
 upload_port = COM12
 upload_speed = 921600
+build_flags = 
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DARDUINO_USB_MODE=1
 lib_deps = 
     tanakamasayuki/TensorFlowLite_ESP32 @ ^1.0.0
