feat: add TensorFlow Lite Micro speech training system for ESP32
- Add comprehensive training scripts with visualization
- Support 13 keywords: on, off, 0-9, house
- Implement tiny_conv model (18KB) for ESP32 compatibility
- Add detailed documentation for accuracy improvement
- Include ESP32 compatibility analysis and optimization guides
- Configure training with 36,000 steps for better accuracy
- Update .gitignore to exclude large files (dataset, models, venv)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,27 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+.python/data_speech
+*.wav
+*.YUNROG
+*.gz
+*.ckpt*
+.DS_Store
+
+# Python virtual environment
+.venv/
+venv/
+__pycache__/
+*.pyc
+*.pyo
+
+# TensorFlow repository (too large)
+tensorflow/
+
+# Dataset (too large, ~2GB)
+dataset/
+
+# Training temporary files
+python/logs/
+python/tmp/
+python/*.log
